# mesoclaw

./: .dockerignore  .gitignore  .mcp.json  AGENT.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross-compile  LICENSE  README.md  SECURITY.md  WIKI_INGEST_UX_FIXES_SUMMARY.md  branding.config.json  check-vault.sh  docker-compose.yml  index.html  install.sh  models.json  package.json  splash.html  todo.md  tsconfig.json  vite.config.ts  vitest.setup.ts  website-data.json
crates/mesoclaw-cli/: Cargo.toml
crates/mesoclaw-cli/src/: client.rs  main.rs
crates/mesoclaw-cli/src/commands/: channel.rs  chat.rs  config.rs  daemon.rs  key.rs  memory.rs  mod.rs  run.rs  schedule.rs
crates/mesoclaw-daemon/: Cargo.toml
crates/mesoclaw-daemon/src/: main.rs
crates/zenii-desktop/: Cargo.toml  tauri.conf.json  zenii.desktop
crates/zenii-desktop/capabilities/: default.json
crates/zenii-desktop/src/: commands.rs  lib.rs  tray.rs
crates/zenii-mcp-server/: Cargo.toml
crates/zenii-mcp-server/src/: main.rs
src-tauri/: CLAUDE.md  Cargo.toml  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2026-01-21-222700_add_llm_settings/: down.sql  up.sql
src-tauri/migrations/2026-01-24-114152_add_ai_providers_models/: down.sql  up.sql
src-tauri/migrations/2026-01-26-070445-0000_add_ai_providers_extended/: up.sql
src-tauri/migrations/2026-01-26-070446-0000_add_ollama_default_model/: down.sql  up.sql
src-tauri/migrations/2026-01-26-171044-0000_remove_anthropic_direct_provider/: down.sql  up.sql
src-tauri/migrations/2026-01-26-171751-0000_reactivate_anthropic_provider/: down.sql  up.sql
src-tauri/migrations/2026-01-26-180000_add_advanced_ai_settings/: down.sql  up.sql
src-tauri/migrations/2026-01-31-120000_add_user_defined_providers/: down.sql  up.sql
src-tauri/migrations/2026-02-01-120000_create_skill_settings/: down.sql  up.sql
src-tauri/migrations/2026-02-18-180000_add_scheduled_jobs/: down.sql  up.sql
src-tauri/migrations/2026-02-19-100000_add_chat_sessions/: down.sql  up.sql
src-tauri/migrations/2026-02-19-200000_scheduled_jobs_active_hours/: down.sql  up.sql
src-tauri/migrations/2026-02-19-210000_create_generated_prompts/: down.sql  up.sql
src-tauri/migrations/2026-02-19-220000_create_tool_audit_log/: down.sql  up.sql
src-tauri/migrations/2026-02-19-230000_add_dnd_notification_prefs/: up.sql
src-tauri/migrations/2026-02-19-230000_create_memories/: down.sql  up.sql
src-tauri/migrations/2026-02-19-231000_add_dnd_notification_prefs/: down.sql  up.sql
src-tauri/migrations/2026-02-20-175721-0000_add_skill_settings/: down.sql  up.sql
src-tauri/migrations/2026-02-20-192325-0000_add_agents_tables/: down.sql  up.sql
src-tauri/migrations/2026-02-20-201320-0000_fix_not_null_constraints/: down.sql  up.sql
src-tauri/migrations/2026-02-20-214906-0000_add_chat_messages/: down.sql  up.sql
src-tauri/migrations/2026-02-21-100000_add_user_identity_fields/: down.sql  up.sql
src-tauri/migrations/2026-02-21-120000-add_chat_session_title/: down.sql  up.sql
src-tauri/migrations/2026-02-21-124207-add_router_config/: down.sql  up.sql
src-tauri/migrations/2026-02-21-204215-lifecycle_persistence/: down.sql  up.sql
src-tauri/src/: cli.rs  lib.rs
src-tauri/src/activity/: commands.rs  mod.rs
src-tauri/src/adapters/: mod.rs  traits.rs
src-tauri/src/agent/: agent_commands.rs  commands.rs  loop_.rs  mod.rs  session_router.rs  tool_parser.rs
src-tauri/src/agent/skills/: mod.rs  skill_metadata.rs  tests.rs
src-tauri/src/agents/: config.rs  mod.rs  orchestrator.rs  spawner.rs  workspace.rs
src-tauri/src/agents/bootstrap/: AGENTS.md  HEARTBEAT.md  IDENTITY.md  MEMORY.md  SOUL.md  TOOLS.md
src-tauri/src/ai/: cache.rs  context.rs  mod.rs  provider.rs  terminology.rs  types.rs  utils.rs  verbosity.rs
src-tauri/src/channels/: discord.rs  manager.rs  matrix_.rs  mod.rs  slack.rs  tauri_ipc.rs  telegram.rs  traits.rs
src-tauri/src/commands/: agents.rs  ai_providers.rs  approval.rs  channels.rs  chat.rs  chat_sessions.rs  file_browser.rs  keychain.rs  lifecycle.rs  llm.rs  logs.rs  mod.rs  notifications.rs  ollama.rs  prompt_generator.rs  router.rs  settings.rs  skills.rs  streaming_chat.rs  utils.rs  window.rs
src-tauri/src/config/: app_identity.rs  loader.rs  mod.rs  schema.rs
src-tauri/src/database/: mod.rs  pool.rs  schema.rs  utils.rs
src-tauri/src/event_bus/: mod.rs  tauri_bridge.rs  tokio_bus.rs  traits.rs
src-tauri/src/extensions/: adapter.rs  mod.rs  runtime.rs
src-tauri/src/gateway/: auth.rs  daemon.rs  mod.rs  routes.rs  ws.rs
src-tauri/src/identity/: commands.rs  loader.rs  mod.rs  types.rs
src-tauri/src/lifecycle/: escalation_manager.rs  event_bus.rs  events.rs  health_monitor.rs  manager.rs  mod.rs  plugin_registry.rs  recovery_engine.rs  state_registry.rs  states.rs  storage.rs  supervisor.rs
src-tauri/src/memory/: chunker.rs  commands.rs  daily.rs  embeddings.rs  hygiene.rs  mod.rs  sqlite_store.rs  store.rs  tools.rs  traits.rs
src-tauri/src/modules/: commands.rs  manifest.rs  mcp_client.rs  mod.rs  sidecar_service.rs  sidecar_tool.rs  templates.rs
src-tauri/src/plugins/: logging.rs  system_tray.rs  window_state.rs
src-tauri/src/prompts/: loader.rs  mod.rs
src-tauri/src/scheduler/: commands.rs  heartbeat.rs  mod.rs  tokio_scheduler.rs  traits.rs
src-tauri/src/security/: mod.rs  policy.rs
src-tauri/src/services/: boot.rs  credential_store.rs  mod.rs  model_registry.rs  notification_service.rs  router.rs  settings.rs
src-tauri/src/skills/: composer.rs  error.rs  executor.rs  loader.rs  mod.rs  registry.rs  selector.rs  settings.rs  state.rs  types.rs
src-tauri/src/skills_embedded/: README.md  mod.rs
src-tauri/src/tools/: cron.rs  file_ops.rs  mod.rs  patch.rs  process.rs  profiles.rs  registry.rs  schema.rs  session_spawn.rs  shell.rs  traits.rs  web.rs
src-tauri/tests/: integration_ai_providers.rs  integration_mongodb.rs  test_mysql_schema.rs  test_ssh_serialization.rs
(+779 files in other folders)
