[package]
name = "mesoclaw"
version = "0.0.1"
description = "Clean Tauri 2 boilerplate with integrated AI capabilities."
authors = ["NSR Technologies Inc."]
edition = "2024"
default-run = "mesoclaw-desktop"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "local_ts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# ---------------------------------------------------------------------------
# Binaries
# ---------------------------------------------------------------------------

[[bin]]
# Headless CLI interface to the AI agent runtime.
# Build with: cargo build --bin mesoclaw
name = "mesoclaw"
path = "src/cli.rs"
required-features = ["cli"]

[[bin]]
# Tauri desktop GUI binary.
# Build with: cargo build --bin mesoclaw-desktop
name = "mesoclaw-desktop"
path = "src/bin/desktop.rs"
required-features = ["desktop"]

# ---------------------------------------------------------------------------
# Feature flags
# ---------------------------------------------------------------------------
# CI matrix — test these combinations:
#   cargo build --features core,cli          (minimal: no desktop, no gateway)
#   cargo build                              (default features)
#   cargo build --all-features               (full build)

[features]
default = ["core", "cli", "desktop", "gateway", "channels-telegram"]
# Core library modules — always compiled when the library is used
core = []
# Headless CLI binary
cli = []
# Tauri desktop GUI binary
desktop = []
# Gateway server (inter-process communication hub) — Phase 2
gateway = ["axum", "tower-http"]
# Sidecar process management — required by containers and mcp-client
sidecars = []
# Container runtime integration (requires sidecar management)
containers = ["sidecars"]
# MCP (Model Context Protocol) client integration (requires sidecar management)
mcp-client = ["sidecars"]
# Telegram channel integration
channels-telegram = ["teloxide"]
# Task/trigger scheduler
scheduler = []
# Vector-based memory store (embedding similarity search)
memory-vector = []
# WASM extension system spike — off by default (adds ~15 MB to binary)
wasm-ext = ["wasmtime", "wat"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-opener = "2.5.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
tracing-log = "0.2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-stronghold = "2"
tauri-plugin-store = "2"
# Phase 5.6: plugin baseline hardening
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
diesel = { version = "2", features = ["sqlite", "r2d2"] }
diesel_migrations = "2"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
thiserror = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["sync", "time", "net", "rt-multi-thread", "macros", "process", "io-util"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.11", features = ["v4", "serde"] }
keyring = { version = "2.3", features = ["platform-all"] }
zeroize = "1.7"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
eventsource-stream = "0.2"
bytes = "1.5"
lru = "0.12"
regex = "1.10"
dirs = "5.0"
urlencoding = "2"
serde_yaml = "0.9"
tera = "1"
tracing = "0.1"
notify = { version = "6", features = ["macos_fsevent"] }
# Module system (Phase 2.8)
toml = "0.8"
which = "7"
# Scheduler (Phase 4.1)
cron = "0.12"
# Gateway (Phase 2.5)
axum = { version = "0.7", features = ["ws", "macros"], optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
# WASM extension system spike (Phase 6.8) — compile-time optional
wasmtime = { version = "26", optional = true }
wat = { version = "1", optional = true }
# Telegram channel integration (Phase 7.1) — compile-time optional
teloxide = { version = "0.13", features = ["macros"], optional = true }
# Non-optional: needed by both gateway server and CLI WebSocket client.
tokio-tungstenite = "0.21"

# CLI dependencies
clap = { version = "4", features = ["derive"] }

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2.5.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros", "time"] }
tempfile = "3.13"

# Profile configuration lives in the workspace root Cargo.toml so that it
# is not silently ignored by Cargo (member-crate profiles are ignored).
