[package]
name = "mesoclaw-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mesoclaw"
path = "src/main.rs"

[dependencies]
mesoclaw-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
