[package]
name = "zenii-desktop"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
zenii-core = { workspace = true, features = ["gateway", "ai", "keyring"] }
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-window-state = "2.4"
tauri-plugin-single-instance = "2.4"
tauri-plugin-opener = "2.5"
tauri-plugin-devtools = { version = "2.0", optional = true }
tauri-plugin-notification = "2.3"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-websocket = "2"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = "2"
opener = "0.8"

[lints]
workspace = true

[features]
default = ["channels", "channels-telegram", "channels-slack", "channels-discord", "scheduler", "workflows", "api-docs"]
api-docs = ["zenii-core/api-docs"]
devtools = ["dep:tauri-plugin-devtools"]
scheduler = ["zenii-core/scheduler"]
channels = ["zenii-core/channels"]
channels-telegram = ["channels", "zenii-core/channels-telegram"]
channels-slack = ["channels", "zenii-core/channels-slack"]
channels-discord = ["channels", "zenii-core/channels-discord"]
workflows = ["zenii-core/workflows"]
local-embeddings = ["zenii-core/local-embeddings"]
